--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "knex": "^3.0.1",
     "morgan": "^1.10.0",
@@ -49,5 +50,8 @@
       "last 1 safari version"
     ],
     "proxy": "http://localhost:3021"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
